# sdl-flappy

./: .gitignore  CMakeLists.txt  README.md  make.bat
inc/: ascii.h  main.h  objects.h  render.h  worldsim.h
inc/debug/: memtrack.h  rdebug.h
src/: ascii.c  main.c  objects.c  render.c  worldsim.c
src/debug/: memtrack.c  rdebug.c
